package com.company;

public class Action {
    public ActionType type;
    int amount;
    String emitterId;
    String targetId;
}
