package com.company;

public enum ActionType {
    IncreaseBalance,
    ReduceBalance
}
