package com.company;

import com.company.screens.*;

public enum Route {
    LOGIN,
    REGISTRATION,
    RULES,
    OPERATIONS,
    BUDGET,
    HISTORY
}