package com.company;

public enum Rule {
    IncreaseOwnBalance,
    ReduceOwnBalance,
    GetOwnBalance,
    IncreaseCommonBalance,
    ReduceCommonBalance,
    GetCommonBalance,
    IncreaseAnotherBalance,
    ReduceAnotherBalance,
    GetAnotherBalance,
    GetOwnHistory,
    GetCommonHistory,
    GetAnotherHistory,
    GetOwnRules,
    ChangeOwnRules,
    GetAnotherRules,
    ChangeAnotherRules
}
