package com.company;

public class TransactionManager {
    private TransactionResult transact(Action[] actions) {
        return null;
    }

    public TransactionResult withdrawFunds(String userId, int amount) {
        return null;
    }

    public TransactionResult replenishFunds(String userId, int amount) {
        return null;
    }

    public TransactionResult transferFunds(String sourceUserId, String targetUserId, String amount) {
        return null;
    }
}
