package com.company;

public class TransactionResult {
    public Boolean error;
    public String errorMessage;
}
